Documenting and refactoring